--- a/auctions/templates/auctions/create.html
+++ b/auctions/templates/auctions/create.html
@@ -5,7 +5,9 @@
         <h2>New Listing</h2>
         <form action="{%url 'create' %}" method="POST">
             {% csrf_token %}
-            {{ form }}
+            <table>
+                {{ form.as_table }}
+            </table>    
             <input type="submit" value="Submit">
         </form>
         {% for listing in listings %}
