--- a/auctions/templates/auctions/create.html
+++ b/auctions/templates/auctions/create.html
@@ -3,7 +3,7 @@
 {% block body %}
     {% if user.is_authenticated %}
         <h2>New Listing</h2>
-        <form action="{%url 'create' %}" method="POST">
+        <form enctype="multipart/form-data" action="{%url 'create' %}" method="POST">
             {% csrf_token %}
             <table>
                 {{ form.as_table }}
