--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -20,6 +20,12 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'mylistings' %}">My Listings</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'watchlist' %}">My watchlist</a>
+            </li>
             <li>
                 <a class="nav-link" href="{% url 'create' %}">New Listing</a>
             </li>
