--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -2,7 +2,7 @@
 
 {% block body %}
     {% if user.is_authenticated %}
-        <h2>Active Listings</h2>
+        <h2>{{ title }}</h2>
 
         {% for listing in listings %}
             {% if listing.active %}
