--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -19,7 +19,7 @@
         </div>
         <hr>
         <div>
-            {% if isowner %}
+                              {% if isowner %}
                 <form action="{%url 'finish' %}" method="post">
                     {% csfr_token %}
                     <input type="button" value="Finish auction">
@@ -27,7 +27,7 @@
             {% else %}
                 <form action="{%url 'bid' %}" method="post">
                     {% csfr_token %}
-                    {{ form }}
+                    {{ bidform }}
                     <input type="submit" value="Bid">
                 </form>
             {% endif %}
