--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -10,7 +10,7 @@
             <p><b>Category:</b> {{ listing.category }}</p>
             <p><b>Listed by:</b> {{ listing.owner }}</p>
             <p><b>Date:</b> {{ listing.creationDate }}</p>
-            <img src={{ listing.picture.url }}>
+            <img src={{ listing.picture.url }} sizes="640x480">
             <p>{{ listing.picture.url }}</p>
             <h3>Description:</h3>
             <p>{{ listing.description }}</p>
@@ -19,10 +19,10 @@
         </div>
         <hr>
         <div>
+            <h3>{% if messsage %}{{ messsage }}{% endif %}</h3>
             {% if isowner %}
                 <a href="{% url 'finish' listing.id %}">Finish auction</a>
             {% else %}
-                {% if error_messsage %}{{ error_messsage }}{% endif %}
                 <form action="{%url 'bid' listing.id%}" method="post">
                     {% csrf_token %}
                     <table>
