positioning after comment post

--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -43,7 +43,7 @@
             {% endfor %}
     </div>
         <hr>
-        <div>
+        <div id="comments">
             <h5>Comments:</h5>
             <form action="" method="post">
                 {% csrf_token %}
