Error message using bootstrap toast

--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -19,27 +19,6 @@
         </div>
         <hr>
         <div>
-            {% if message %}
-                <script>
-                    document.addEventListener("DOMContentLoaded", function(event) { 
-                        var toastElList = [].slice.call(document.querySelectorAll('.toast'))
-                        var toastList = toastElList.map(function (toastEl) {
-                            return new bootstrap.Toast(toastEl, option)
-                        })
-                        var x=document.getElementById("msgToast");
-                        x.toast('show');
-                        //$("#msgToast").toast('show');
-                    });
-                </script>
-                <div id="msgToast" class="toast align-items-center text-white bg-primary border-0" role="alert" aria-live="assertive" aria-atomic="true">
-                    <div class="d-flex">
-                    <div class="toast-body">
-                        {{ message }}
-                    </div>
-                    <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
-                    </div>
-                </div>
-            {% endif %}
             {% if isowner %}
                 <a href="{% url 'finish' listing.id %}">Finish auction</a>
             {% else %}
@@ -50,6 +29,49 @@
                     </table>
                     <input type="submit" value="Bid">
                 </form>
+            {% endif %}
+
+            {% if message %}
+                <script>
+
+                    document.addEventListener("DOMContentLoaded", function(event) { 
+                    //var x = new bootstrap.Toast(document.getElementById("liveToast"), "show");
+                    var option;
+                    var toastElList = [].slice.call(document.querySelectorAll('.toast'));
+                    var toastList = toastElList.map(function (toastEl) {
+                        return new bootstrap.Toast(toastEl, option);
+                    });
+                    var myToastEl = document.getElementById('msgToast')
+                    var myToast = bootstrap.Toast.getOrCreateInstance(myToastEl) // Returns a Bootstrap toast instance
+                    var liveToast =bootstrap.Toast.getOrCreateInstance(document.getElementById('liveToast'))
+                    myToast.show();
+                    //liveToast.show();
+                    });
+                </script>
+                
+                <div class="position-fixed top-0 start-50 translate-middle-x p-3" style="z-index: 11">
+                    <div id="msgToast" class="toast align-items-center text-white bg-danger border-0 position-relative top-200 end-0 p-3" role="alert" aria-live="assertive" aria-atomic="true">
+                        <div class="d-flex">
+                        <div class="toast-body">
+                            {{ message }}
+                        </div>
+                        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="position-fixed top-0 start-50 translate-middle-x p-3" style="z-index: 11">
+                    <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+                        <div class="toast-header">
+                            <img src="..." class="rounded me-2" alt="...">
+                            <strong class="me-auto">Bootstrap</strong>
+                            <small>11 mins ago</small>
+                            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                        </div>
+                        <div class="toast-body">
+                            {{ message }}
+                        </div>
+                    </div>
+                </div>
             {% endif %}
             {% for bid in bids %}
                 <div>
