--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -23,6 +23,9 @@
                 <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="{% url 'categories' %}">Browse by category</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'mylistings' %}">My Listings</a>
             </li>
             <li class="nav-item">
