--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -34,6 +34,9 @@
             <li>
                 <a class="nav-link" href="{% url 'create' %}">New Listing</a>
             </li>
+            <li>
+                <a class="nav-link" href="{% url 'finished' %}">Finished auctions</a>
+            </li>
             {% if user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
