--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -1,3 +1,17 @@
 body {
     padding: 10px;
 }
+
+.container {
+    width: 100px;
+    height: 100px;
+    
+    /* border: dashed blue 1px; */
+    vertical-align: middle;
+    align-content: center;
+  }
+  
+  .container img {
+    max-height:100%;
+    max-width: 100%;
+  }
