--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -3,29 +3,35 @@
 {% block body %}
     {% if user.is_authenticated %}
         <h2>{{ title }}</h2>
-        <table> 
-            <tr>
-                <th>Picture</th>
-                <th>Description</th>
-                <th>Current Price</th>
-            </tr>
-            {% for listing in listings %}
+        <table class="table table-hover border-secondary table-striped"> 
+            <thead>
                 <tr>
-                    <td align="center">
-                        <a href="{% url 'listing' listing.id %}">
-                            <img height="100px" width="auto" src="{{ listing.picture.url }}" alt="">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="{% url 'listing' listing.id %}">
-                            Listing {{ listing.id }}: {{ listing.title }}
-                        </a>
-                    </td>
-                    <td align="right">
-                        {{ listing.currentPrice }}
-                    </td>
+                    <th>Picture</th>
+                    <th>Description</th>
+                    <th>Current Price</th>
                 </tr>
-            {% endfor %}
+            </thead>
+            <tbody>                
+                {% for listing in listings %}
+                    <tr>
+                        <td>
+                            <div class="container">
+                                <a href="{% url 'listing' listing.id %}">
+                                    <img src="{{ listing.picture.url }}" alt="">
+                                </a>
+                            </div>
+                        </td>
+                        <td>
+                            <a href="{% url 'listing' listing.id %}">
+                                Listing {{ listing.id }}: {{ listing.title }}
+                            </a>
+                        </td>
+                        <td align="right">
+                            {{ listing.currentPrice }}
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
         </table>
     {% endif %}
     
